--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -14,8 +14,8 @@
 }
 
 .infoCardCallActionContainer :global(.vtex-button):hover {
-    color: white;
-    background-color: blue;
+    color: gray;
+    background-color: white;
     border: transparent;
 }
 
@@ -27,7 +27,7 @@
     background-color: #e1e1e1;
 }
 
-.infoCardContainer {
+.infoCardImg {
     max-width: 1260px;
     margin: auto;
     padding: 0;
