--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -27,7 +27,7 @@
     background-color: #e1e1e1;
 }
 
-.infoCardImg {
+.infoCardContainer {
     max-width: 1260px;
     margin: auto;
     padding: 0;
